/ ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.md’ / ‘Complex Analysis/UGA Questions/Complex_Analysis_Problems.pdf’ / ‘Complex Analysis/UGA Questions/sections/006_Laurent_Singularities.md’ / ‘Complex Analysis/UGA Questions/sections/092_Spring2020_HW2.md’

--- a/Complex Analysis/UGA Questions/sections/092_Spring2020_HW2.md
+++ b/Complex Analysis/UGA Questions/sections/092_Spring2020_HW2.md
@@ -7,9 +7,9 @@
 ### 2.6.1
 
 Show that
-\begin{align*}
+\[
 \int_{0}^{\infty} \sin \left(x^{2}\right) d x=\int_{0}^{\infty} \cos \left(x^{2}\right) d x=\frac{\sqrt{2 \pi}}{4}
-.\end{align*}
+.\]
 
 > Hint: integrate $e^{-x^2}$ over the following contour, using the fact that $\int_{-\infty}^{\infty} e^{-x^{2}} d x=\sqrt{\pi}$:
 
@@ -21,9 +21,9 @@ Show that
 
 Show that
 
-\begin{align*}
+\[
 \int_{0}^{\infty} \frac{\sin x}{x} d x=\frac{\pi}{2}
-.\end{align*}
+.\]
 
 > Hint: use the fact that this integral equals $\frac{1}{2 i} \int_{-\infty}^{\infty} \frac{e^{i x}-1}{x} d x$, and integrate around an indented semicircle.
 
@@ -36,9 +36,9 @@ Assume that $f'$ is continuous and prove Goursat's theorem.
 
 > Hint: Green's theorem states
 
-\begin{align*}
+\[
 \int_{T} F d x+G d y=\int_{T^\circ}\left(\frac{\partial G}{\partial x}-\frac{\partial F}{\partial y}\right) d x d y
-.\end{align*}
+.\]
 
 ### 2.6.6
 
@@ -101,9 +101,9 @@ Prove that if $\abs{z} = 1 \implies \abs{f(z)} = 1$, then $f$ is constant.
 
 ### 1
 Let $a_n\neq 0$ and show that
-\begin{align*}
+\[
 \lim_{n\to \infty} {\abs{a_{n+1}} \over \abs{a_n}} = L \implies \lim_{n\to\infty} \abs{a_n}^{1\over n} = L
-.\end{align*}
+.\]
 
 In particular, this shows that when applicable, the ratio test can be used to calculate the radius of convergence of a power series.
 
@@ -123,36 +123,36 @@ c. $\sum_n {z^n \over n}$ converges at every point of $S^1$ except $z=1$.
 
 ### 4
 Without using Cauchy's integral formula, show that if $\abs{a} < r < \abs{b}$, then
-\begin{align*}
+\[
 \int_{\gamma} \frac{d z}{(z-\alpha)(z-\beta)}=\frac{2 \pi i}{\alpha-\beta}
-\end{align*}
+\]
 where $\gamma$ denotes the circle centered at the origin of radius $r$ with positive orientation.
 
 ### 5
 Assume $f$ is continuous in the region $\theset{x+iy \suchthat x\geq x_0, ~ 0\leq y \leq b}$, and the following limit exists independent of $y$:
-\begin{align*}
+\[
 \lim_{x\to +\infty}f(x+iy) = A
-.\end{align*}
+.\]
 
 Show that if $\gamma_x \definedas \theset{z = x+it \suchthat 0 \leq t \leq b}$, then
-\begin{align*}
+\[
 \lim_{x\to +\infty} \int_{\gamma_x} f(z) \,dz = iAb
-.\end{align*}
+.\]
 
 
 ### 6
 Show by example that there exists a function $f(z)$ that is holomorphic on $\theset{z\in \CC \suchthat 0 < \abs{z} < 1}$ and for all $r<1$,
-\begin{align*}
+\[
 \int_{\abs z = r} f(z) \, dz = 0
-,\end{align*}
+,\]
 but $f$ is not holomorphic at $z=0$.
 
 ### 7
 Let $f$ be analytic on a region $R$ and suppose $f'(z_0) \neq 0$ for some $z_0 \in R$.
 Show that if $C$ is a circle of sufficiently small radius centered at $z_0$, then 
-\begin{align*}
+\[
 \frac{2 \pi i}{f^{\prime}\left(z_{0}\right)}=\int_{C} \frac{d z}{f(z)-f\left(z_{0}\right)}
-.\end{align*}
+.\]
 
 > Hint: use the inverse function theorem.
 
@@ -160,9 +160,9 @@ Show that if $C$ is a circle of sufficiently small radius centered at $z_0$, the
 ### 8
 Assume two functions $u, b: \RR^2 \to \RR$ have continuous partial derivatives at $(x_0 ,y_0)$.
 Show that $f \definedas u + iv$ has derivative $f'(z_0)$ at $z_0 = =x_0 + iy_0$ if and only if
-\begin{align*}
+\[
 \lim _{r \rightarrow 0} \frac{1}{\pi r^{2}} \int_{\left|z-z_{0}\right|=r} f(z) d z=0
-.\end{align*}
+.\]
 
 
 ### 9 (Cauchy's Formula for Exterior Regions)
@@ -170,50 +170,50 @@ Show that $f \definedas u + iv$ has derivative $f'(z_0)$ at $z_0 = =x_0 + iy_0$ 
 Let $\gamma$ be a piecewise smooth simple closed curve with interior $\Omega_1$ and exterior $\Omega_2$.
 Assume $f'$ exists in an open set containing $\gamma$ and $\Omega_2$ with $\lim_{z\to \infty} f(z) = A$.
 Show that
-\begin{align*}
+\[
 \frac{1}{2 \pi i} \int_{\gamma} \frac{f(\xi)}{\xi-z} d \xi=\left\{\begin{array}{ll}
 A, & \text { if } z \in \Omega_{1} \\
 -f(z)+A, & \text { if } z \in \Omega_{2}
 \end{array}\right.
-.\end{align*}
+.\]
 
 
 ### 10
 Let $f(z)$ be bounded and analytic in $\CC$.
 Let $a\neq b$ be any fixed complex numbers.
 Show that the following limit exists:
-\begin{align*}
+\[
 \lim_{R\to \infty} \int_{\abs z = R} {f(z) \over (z-a)(z-b)} \,dz
-.\end{align*}
+.\]
 
 Use this to show that $f(z)$ must be constant.
 
 
 ### 11
 Suppose $f(z)$ is entire and 
-\begin{align*}
+\[
 \lim_{z\to\infty} {f(z) \over z} = 0
-.\end{align*}
+.\]
 
 Show that $f(z)$ is a constant.
 
 ### 12
 Let $f$ be analytic in a domain $D$ and $\gamma$ be a closed curve in $D$.
 For any $z_0\in D$ not on $\gamma$, show that
-\begin{align*}
+\[
 \int_{\gamma} \frac{f^{\prime}(z)}{\left(z-z_{0}\right)} d z=\int_{\gamma} \frac{f(z)}{\left(z-z_{0}\right)^{2}} d z
-.\end{align*}
+.\]
 Give a generalization of this result.
 
 
 ### 13
 
 Compute
-\begin{align*}
+\[
 \int_{\abs z = 1} \qty{z + {1\over z}}^{2n} {dz \over z}
-\end{align*}
+\]
 and use it to show that
-\begin{align*}
-\in_0^{2\pi} \cos^{2n}(\theta) \, d\theta = 2\pi \qty{1\cdot 3 \cdot 5 \cdots (2n-1) \over 2 \cdot 4 \cdot 6 \cdots (2n)}
-.\end{align*}
+\[
+\int_0^{2\pi} \cos^{2n}(\theta) \, d\theta = 2\pi \qty{1\cdot 3 \cdot 5 \cdots (2n-1) \over 2 \cdot 4 \cdot 6 \cdots (2n)}
+.\]
 
