/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -72,14 +72,14 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
   - Since $f\in L^1$, choose $g_n\subset C_c^\infty(\RR^1)$ smooth and compactly supported so that $$\norm{f-g}_{L^1} < \eps.$$
   - Claim: $\norm{\tau_x f - \tau_x g} < \eps$.
     - This follows from a change of variables:
-    \[  
+  \[  
     \norm{\tau_x f - \tau_x g}_1
     &\definedas \int_\RR \abs{\tau_x f(y) - \tau_x g(y)}\, dy \\
     &= \int_\RR \abs{f(y-x) - g(y-x)}\, dy  \\
     &= \int_\RR \abs{f(u) - g(u)}\, du \qquad (u=y-x,\, du=dy) \\
     &= \norm{f-g}_1 \\
     &< \eps
-    .\]
+  .\]
   - Then
   \[  
   \norm{\tau_x f - f}_1 
@@ -90,7 +90,7 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 
 - Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
 \[  
-\norm{\tau_x g_n - g_n}_1 
+\norm{\tau_x g - g}_1 
 &= \int_\RR \abs{g(y-x) - g(y)}\,dy \\
 &= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy\\
 &= \int_E \abs{g(y-x) - g(y)} \,dy 
