/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -88,21 +88,22 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
   &\leq 2\eps + \norm{\tau_x g - g}_1
   .\]
 
-- Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
-\[  
-\norm{\tau_x g - g}_1 
-&= \int_\RR \abs{g(y-x) - g(y)}\,dy \\
-&= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy\\
-&= \int_E \abs{g(y-x) - g(y)} \,dy 
-.\]
+- To show this for compactly supported functions:
+  - Let $g\in C_c^\infty(\RR^1)$, let $E = \supp(g)$, and write
+  \[  
+  \norm{\tau_x g - g}_1 
+  &= \int_\RR \abs{g(y-x) - g(y)}\,dy \\
+  &= \int_E \abs{g(y-x) - g(y)} \,dy + \int_{E^c} \abs{g(y-x) - g(y)} \,dy\\
+  &= \int_E \abs{g(y-x) - g(y)} \,dy 
+  .\]
 
-- But $g$ is smooth and compactly supported on $E$, and thus uniformly continuous on $E$, so
-\[  
-\lim_{x\to 0} \int_E \abs{g(y-x) - g(y)} \,dy 
-&= \int_E \lim_{x\to 0} \abs{g(y-x) - g(y)} \,dy \\
-&= \int_E 0 \,dy \\
-&= 0
-.\]
+  - But $g$ is smooth and compactly supported on $E$, and thus uniformly continuous on $E$, so
+  \[  
+  \lim_{x\to 0} \int_E \abs{g(y-x) - g(y)} \,dy 
+  &= \int_E \lim_{x\to 0} \abs{g(y-x) - g(y)} \,dy \\
+  &= \int_E 0 \,dy \\
+  &= 0
+  .\]
 
 ## 4
 
