/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -64,7 +64,12 @@ A = A_1\disjoint A_2 \definedas \theset{f>g} \disjoint \theset{f<g}
 
 ## 3
 
-- Fixing notation, set $\tau_x f(y) = f(y-x)$; we then want to show
+Concepts used:
+
+- $C_c^\infty \injects L^p$ is dense.
+- If $f
+
+- Fixing notation, set $\tau_x f(y) \definedas f(y-x)$; we then want to show
 \[  
 \norm{\tau_x f -f}_{L^1} \converges{x\to 0}\to 0
 .\]
