--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -130,8 +130,8 @@ Concepts used:
   \mu(G)
   &= \mu\qty{\union_{N=1}^\infty \intersect_{n=N}^\infty E_n^c} \\
   &\leq \sum_{N=1}^\infty \mu \qty{\intersect_{n=N}^\infty E_n^c}  \\
-  &\leq \sum_{N=1}^\infty \mu(E_M^c) \quad \forall M\geq N \\
-  &\definedas \sum_{n=1}^\infty \mu(X\setminus E_M) \\
+  &\leq \sum_{N=1}^\infty \mu(E_M^c) \\ 
+  &\definedas \sum_{N=1}^\infty \mu(X\setminus E_N) \\
   &\converges{N\to\infty}\to 0
   .\]
   \todo{Last step sketchy.}
