/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -145,7 +145,8 @@ Concepts used:
   \int_\RR { \abs{\phi(x)}^n \over 1+ x^2} 
   &\leq
   \int_\RR { \norm{\phi}_\infty \over 1+ x^2}  \\
-  &= \norm{\phi}_\infty \int_\RR {1\over 1 + x^2}
+  &= \norm{\phi}_\infty \int_\RR {1\over 1 + x^2}\\
+  &= \norm{\phi}_\infty \arctan(x)\evalfrom 
   .\]
 
   
