--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -147,7 +147,7 @@ Concepts used:
   \int_\RR { \norm{\phi}_\infty \over 1+ x^2}  \\
   &= \norm{\phi}_\infty \int_\RR {1\over 1 + x^2}\\
   &= \norm{\phi}_\infty \arctan(x)\evalfrom_{-\infty}^{\infty} 
-  &= \norm{\phi}_\infty\qty{ } 
+  &= \norm{\phi}_\infty\qty{{\pi \over 2} -  } 
   .\]
 
   
