--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -143,11 +143,12 @@ Concepts used:
   - Since $\abs \phi \leq \norm{\phi}_\infty$ a.e., we can write 
   \[  
   \int_\RR { \abs{\phi(x)}^n \over 1+ x^2} 
-  &\leq \int_\RR { \norm{\phi}_\infty \over 1+ x^2}  \\
-  &= \norm{\phi}_\infty \int_\RR {1\over 1 + x^2} \\
-  &= \norm{\phi}_\infty \arctan(x)\evalfrom_{-\infty}^{\infty}  \\
+  &\leq \int_\RR { \norm{\phi}_\infty^n \over 1+ x^2}  \\
+  &= \norm{\phi}_\infty^n \int_\RR {1\over 1 + x^2} \\
+  &= \norm{\phi}_\infty^n \arctan(x)\evalfrom_{-\infty}^{\infty}  \\
   &= \norm{\phi}_\infty\qty{{\pi \over 2} - {-\pi \over 2} } 
-  &= \pi \norm{\phi}_\infty
+  &= \pi \norm{\phi}_\infty^n \\
+  \implies 
   .\]
 
   
