--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -146,7 +146,7 @@ Concepts used:
   &\leq \int_\RR { \norm{\phi}_\infty^n \over 1+ x^2}  \\
   &= \norm{\phi}_\infty^n \int_\RR {1\over 1 + x^2} \\
   &= \norm{\phi}_\infty^n \arctan(x)\evalfrom_{-\infty}^{\infty}  \\
-  &= \norm{\phi}_\infty^n \qty{{\pi \over 2} - {-\pi \over 2} } 
+  &= \norm{\phi}_\infty^n \qty{{\pi \over 2} - {-\pi \over 2} }  \\
   &= \pi \norm{\phi}_\infty^n \\
   \implies L \leq 
   .\]
