/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -151,8 +151,8 @@ Concepts used:
   &= \pi \norm{\phi}_\infty^n \\
   \implies L^{1\over n} &\leq \sqrt[n]{\pi \norm{\phi}_\infty^n} \\ 
   \implies L \leq \pi^{1\over n} \norm{\phi}_\infty \\
-  &\converges{n\to \infty } \norm{\phi}_\infty
+  &\converges{n\to \infty }\to \norm{\phi}_\infty
   ,\]
-  where we've used the fact that $c^{1\over n} \converges{n\to\infty}
+  where we've used the fact that $c^{1\over n} \converges{n\to\infty}\to 1$
 
   
