/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -160,7 +160,7 @@ Claim: $R\leq L$.
 
 - Use the fact that $L^2$ has small tails: if $h\in L^2(\RR)$, then for any $\eps > 0$, 
 \[  
-\forall \eps,\, \exist t \\lim_{t\to \pm \infty} \int_{\abs{x} \geq \abs{t}} h(x) \,dx < \eps
+\forall \eps,\, \exist t \qst \lim_{t\to \pm \infty} \int_{\abs{x} \geq \abs{t}} h(x) \,dx < \eps
 .\]
 
 
