/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -163,6 +163,13 @@ Claim: $R\leq L$.
 \[  
 S_\eps \definedas \theset{x\in \RR^n\suchthat \abs{\phi(x)} \geq \norm{\phi}_\infty - \eps}
 .\]
+- Then we have
+\[  
+\int_\RR {\abs{\phi(x)}^n \over 1 +x^2}\,dx
+\geq \int_{S_\eps} {\abs{\phi(x)}^n \over 1 +x^2}\,dx
+\geq \int_{S_\eps} {\abs{\phi(x)}^n \over 1 +x^2}\,dx
+
+.\]
 
 
 
