/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/08_2016 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/08_2016 Fall.md
@@ -166,9 +166,10 @@ S_\eps \definedas \theset{x\in \RR^n\suchthat \abs{\phi(x)} \geq \norm{\phi}_\in
 - Then we have
 \[  
 \int_\RR {\abs{\phi(x)}^n \over 1 +x^2}\,dx
-\geq \int_{S_\eps} {\abs{\phi(x)}^n \over 1 +x^2}\,dx
-\geq \int_{S_\eps} {\abs{\phi(x)}^n \over 1 +x^2}\,dx
-
+&\geq \int_{S_\eps} {\abs{\phi(x)}^n \over 1 +x^2}\,dx \quad S_\eps \subset \RR \\
+&\geq \int_{S_\eps} { \qty{\norm{\phi}_\infty - \eps}^n \over 1 +x^2}\,dx  \quad\text{by definition of }S_\eps \\
+&= \qty{\norm{\phi}_\infty - \eps}^n \int_{S_\eps} { 1 \over 1 +x^2}\,dx \\
+&\geq \qty{\norm{\phi}_\infty - \eps}^n \int_{S_\eps} 1 \,dx
 .\]
 
 
