/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -233,35 +233,37 @@ n &\leq \abs{Z(G)} + \frac 1 2\abs{G \setminus Z(G)} \\
 
 ### a
 
-Suppose $\tor(M)$ has rank $n \geq 1$.
-Then let $\vector r$ be a generating element.
-
-However, since $\vector r\in \tor(M)$, there exists an $s\in R\setminus 0_R$ such that $s\vector r = 0_M$.
-
-But then $s\vector r = 0$ with $s\neq 0$, so $\theset{\vector r}$ is by definition not linearly independent.
+- Suppose toward a contradiction $\tor(M)$ has rank $n \geq 1$.
+- Then $\tor(M)$ has a linearly independent generating set $B = \theset{\vector r_1, \cdots, \vector r_n}$, so in particular
+\[  
+\sum_{i=1}^n s_i \vector r_i = 0 \implies s_i = 0_R \,\forall i
+.\]
+- Let $\vector r$ be any of of these generating elements.
+- Since $\vector r\in \tor(M)$, there exists an $s\in R\setminus 0_R$ such that $s\vector r = 0_M$.
+- Then $s\vector r = 0$ with $s\neq 0$, so $\theset{\vector r} \subseteq B$ is *not* a linearly independent set, a contradiction.
 
 $\qed$
 
 ### b
 
-Let $n = \rank M$, and let $\mathcal B = \theset{\vector r_i}_{i=1}^n \subseteq R$ be a generating set.
-Let $M' \definedas M/\tor(M)$ and $\pi: M \to M'$ be the canonical quotient map.
+- Let $n = \rank M$, and let $\mathcal B = \theset{\vector r_i}_{i=1}^n \subseteq R$ be a generating set.
+- Let $M' \definedas M/\tor(M)$ and $\pi: M \to M'$ be the canonical quotient map.
 
-**Claim:**
-$\pi(\mathcal B)$ is a basis for $M'$.
+- **Claim:** 
+  $\pi(\mathcal B)$ is a basis for $M'$.
 
-**Linearly Independent:**
+  - **Linearly Independent:**
 
-Let $\mathcal B' = \pi(\mathcal B) = \theset{\vector r_i + \tor(M)}_{i=1}^n$ and suppose that
-$$
-\sum_{i=1}^n s_i (\vector r_i + \tor M) = \vector 0_{M'}
-.$$
+    - Let $\mathcal B' = \pi(\mathcal B) = \theset{\vector r_i + \tor(M)}_{i=1}^n$ and suppose that
+  \[
+  \sum_{i=1}^n s_i (\vector r_i + \tor M) = \vector 0_{M'}
+  .\]
 
-Since $x = 0 \in M' \iff x \in \tor(M)$,
-$$
-\sum_{i=1}^n s_i \vector r_i \in \tor(M) \implies \exists \alpha \neq 0_R \in R \text{ such that }
-\alpha_i \sum s_i \vector r_i = \vector 0_M
-.$$
+    - Since $x = 0 \in M' \iff x \in \tor(M)$,
+  \[
+  \sum_{i=1}^n s_i \vector r_i \in \tor(M) \implies \exists \alpha \neq 0_R \in R \text{ such that }
+  \alpha_i \sum s_i \vector r_i = \vector 0_M
+  .\]
 
 But since $R$ is an integral domain and $\alpha \neq 0$, we must have $s_i = 0$ for all $i$.
 
