/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -281,7 +281,7 @@ $\qed$
   &= \sum_{i=1}^n s_i \pi(\vector r_i) \\
   &= \sum_{i=1}^n s_i \vector (\vector r_i + \tor(M))
   ,\]
-    which expresses $\vector x$ as a linear combination of elements in $\mathcal B'$.
+  which expresses $\vector{x}$ as a linear combination of elements in $\mathcal B'$.
 
 ### c
 
