--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -277,7 +277,7 @@ $\qed$
   \[
   \vector x
   &= \pi(\vector m) \\
-  &= \pi(\sum_{i=1}^n s_i \vector r_i) \\
+  &= \pi\qty{ \sum_{i=1}^n s_i \vector r_i} \\
   &= \sum_{i=1}^n s_i \pi(\vector r_i) \\
   &= \sum_{i=1}^n s_i \vector (\vector r_i + \tor(M))
   ,\]
