/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -256,12 +256,12 @@ $\qed$
 
     - Suppose that
   \[
-  \sum_{i=1}^n s_i (\vector r_i + \tor M) = \vector 0_{\tilde M}
+  \sum_{i=1}^n s_i (\vector r_i + \tor(M)) = \vector 0_{\tilde M}
   .\]
 
     - This equals
   \[  
-  \sum_{i=1}^n (s_)
+  \sum_{i=1}^n (s_i \vector r_i) + \tor(M)
   .\]
     - Since $\tilde{\vector x} = 0 \in \tilde M \iff \tilde{\vector x} = \vector x + \tor(M)$ where $\vector x \in \tor(M)$, this forces $
   \[
