--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -259,7 +259,7 @@ $\qed$
   \sum_{i=1}^n s_i (\vector r_i + \tor(M)) = \vector 0_{\tilde M}
   .\]
 
-    - This equals
+    - Then  
   \[  
   \sum_{i=1}^n (s_i \vector r_i) + \tor(M)
   .\]
