--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -259,9 +259,10 @@ $\qed$
   \sum_{i=1}^n s_i (\vector r_i + \tor(M)) = \vector 0_{\tilde M}
   .\]
 
-    - Then  
+    - Then using 
   \[  
-  \sum_{i=1}^n (s_i \vector r_i) + \tor(M)
+  \sum_{i=1}^n \qty { s_i \vector r_i + \tor(M)} = 
+  \qty{ \sum_{i=1}^n  s_i \vector r_i} + \tor(M) 
   .\]
     - Since $\tilde{\vector x} = 0 \in \tilde M \iff \tilde{\vector x} = \vector x + \tor(M)$ where $\vector x \in \tor(M)$, this forces $s_i \vector r_i \in \tor(M)$ for all $i$.
 
