/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -262,7 +262,7 @@ $\qed$
     - Then using the definition of coset addition/multiplication, we can write this as
   \[  
   \sum_{i=1}^n \qty { s_i \vector r_i + \tor(M)} = 
-  \qty{ \sum_{i=1}^n  s_i \vector r_i} + \tor(M) 
+  \qty{ \sum_{i=1}^n  s_i \vector r_i} + \tor(M)  = 0_{\tilde M}
   .\]
     - Since $\tilde{\vector x} = 0 \in \tilde M \iff \tilde{\vector x} = \vector x + \tor(M)$ where $\vector x \in \tor(M)$, this forces $s_i \vector r_i \in \tor(M)$ for all $i$.
 
