/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -296,7 +296,8 @@ $\qed$
 
   - Suppose $I$ is free and let $I = \generators{B}$ for some basis, we will show $\abs{B} = 1$>
   - Toward a contradiction, suppose $\abs{B} \geq 2$ and let $m_1, m_2\in B$.
-  - Then  since $m_2 m_1 - m_1 m_2 = 0$ is a linear dependence, so $B$ has only one element $m$.
+  - Then  since $R$ is commutative, $m_2 m_1 - m_1 m_2 = 0$ and this yields a linear dependence, 
+  - So $B$ has only one element $m$.
 
   - But then $I = \generators{m} = R_m$ is cyclic as an $R\dash$ module and thus principal as an ideal of $R$. 
   - The result follows by the contrapositive.
