--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -301,7 +301,7 @@ $\qed$
 
   - But then $I = \gens{m} = R_m$ is cyclic as an $R\dash$ module and thus principal as an ideal of $R$. 
 
-
+  - Now since $I$ was asu
 
 **$M$ is rank 1**:
 
