/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -301,7 +301,7 @@ $\qed$
 
   - But then $I = \gens{m} = R_m$ is cyclic as an $R\dash$ module and thus principal as an ideal of $R$. 
 
-  - Now since $M$ was assumed to *not* be principal, $M$ is not free.
+  - Now since $M$ was assumed to *not* be principal, $M$ is not free (using the contrapositive of the claim).
 
 **$M$ is rank 1**:
 
