/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -305,7 +305,7 @@ $\qed$
 
 **$M$ is rank 1**:
 
-- For any module, we can take an element $M\neq 0_M$ and consider its cyclic module $Rm$.
+- For any module, we can take an element $m\in M\nonzero$ and consider its cyclic module $Rm$.
 
 - Thus the rank of $M$ is at least 1, since $\theset{m}$ is a subset of a spanning set.
 
