--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -308,7 +308,8 @@ $\qed$
 - For any module, we can take an element $\vector m\in M\nonzero$ and consider the cyclic submodule $R\vector m$.
 
 - Since $M$ is not principle, it is not the zero ideal, and contains at least two elements. So we can consider an element $\vector m\in M$.
-- Thus the rank of $M$ is at least 1, since $\theset{m}$ is a subset of a spanning set.
+
+- We have $\rank_R(M) \geq 1$, since $\theset{m}$ is a subset of a spanning set.
 
 - It can not be linearly dependent, since $R$ is an integral domain and $M\subseteq R$, so $\alpha m = 0 \implies \alpha = 0$.
 
