/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -311,13 +311,13 @@ $\qed$
 
 - We have $\rank_R(M) \geq 1$, since $R\vector m \leq M$ and $\theset{m}$ is a subset of some spanning set.
 
-- $R\vector m$ can not be linearly dependent, since $R$ is an integral domain and $M\subseteq R$, so $\alpha \vector m = 0 \implies \alpha = 0$.
+- $R\vector m$ can not be linearly dependent, since $R$ is an integral domain and $M\subseteq R$, so $\alpha \vector m = \vector 0 \implies \alpha = 0_R$.
 
-- However, the rank is at most 1 since $R$ is commutative.
+- Claim: since $R$ is commutative, $\rank_R(M) \leq 1$.
 
-- If we take two elements $\vector m, \vector n \in M$, then since $m, n\in R$ as well, we have $nm = mn$ and so
+  - If we take two elements $\vector m, \vector n \in M$, then since $m, n\in R$ as well, we have $nm = mn$ and so
 \[
-(n)\vector m + (-m)\vector n = 0_R = 0_M
+(n)\vector m + (-m)\vector n = 0_R = \vector 0
 \]
   is a linear dependence.
 
