/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.md’ / ‘Algebra/UGA Solutions/sections/03_2019 Spring.pdf’

--- a/Algebra/UGA Solutions/sections/03_2019 Spring.md
+++ b/Algebra/UGA Solutions/sections/03_2019 Spring.md
@@ -290,6 +290,8 @@ $\qed$
 
 ### c
 
+Notation: Let $0_R$ denote $0\in R$ regarded as an
+
 **$M$ is not free:**
 
 - **Claim**: If $I\subseteq R$ is an ideal *and* a free $R\dash$module, then $I$ is principal .
