/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.md’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ - ‘Algebra/UGA Solutions/sections/04_2018 Fall.md’ / ‘Algebra/UGA Solutions/sections/05_2018 Spring.md’ / ‘Algebra/UGA Solutions/sections/50_Group Theory.md’ / ‘Algebra/UGA Solutions/sections/51_Commutative Algebra.md’

--- a/Algebra/UGA Solutions/sections/05_2018 Spring.md
+++ b/Algebra/UGA Solutions/sections/05_2018 Spring.md
@@ -1,6 +1,6 @@
 # Spring 2018
 
-## 1 \label{problem:session_1_5_1_soln}
+## Spring 2018 #1 
 
 Concepts Used:
 
@@ -76,7 +76,7 @@ Strategy: examine $\abs{G/Z(G)}$ by cases.
 
 $\qed$
 
-## 2
+## Spring 2018 #2
 
 > Not the nicest proof! Would be better to replace the ad-hoc computations at the end..
 
@@ -150,7 +150,7 @@ and so the order of $\sigma$ is strictly greater than 2, and thus 4, and thus $\
 
 ?? The subgroup of index 2 $\generators{\sigma^2}$ corresponds to the field extension $Q(\sqrt 2) / \QQ$.
 
-## 3
+## Spring 2018 #3
 
 > Moral: $H_1 \intersect H_2 \iff E_1 E_2$, $H_1 H_2 \iff E_1 \intersect E_2$.
 
