/ ‘Real Analysis/UGA Questions/sections/01_2020 Spring.md’ / ‘Real Analysis/UGA Questions/sections/02_2019 Fall.md’ / ‘Real Analysis/UGA Questions/sections/03_2019 Spring.md’ / ‘Real Analysis/UGA Questions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Questions/sections/01_2020 Spring.md
+++ b/Real Analysis/UGA Questions/sections/01_2020 Spring.md
@@ -1,13 +1,13 @@
 # Spring 2020
 
-## 1
+## Spring 2020 # 1
 
 Prove that if $f: [0, 1] \to \RR$ is continuous then
 \[
 \lim_{k\to\infty} \int_0^1 kx^{k-1} f(x) \,dx = f(1)
 .\]
 
-## 2
+## Spring 2020 # 2
 
 Let $m_*$ denote the Lebesgue outer measure on $\RR$.
 
@@ -24,7 +24,7 @@ b. Prove that if $E\subseteq \RR$ has the property that
 
     Be sure to address the case when $m_*(E) = \infty$.
 
-## 3
+## Spring 2020 # 3
 
 a. Prove that if $g\in L^1(\RR)$ then
 \[
@@ -36,7 +36,7 @@ b. Prove that if $f\in L^1([1, \infty])$ and is decreasing, then $\lim_{x\to\inf
 
 c. If $f: [1, \infty) \to [0, \infty)$ is decreasing with $\lim_{x\to \infty} xf(x) = 0$, does this ensure that $f\in L^1([1, \infty))$?
 
-## 4
+## Spring 2020 # 4
 
 Let $f, g\in L^1(\RR)$. 
 Argue that $H(x, y) \definedas f(y) g(x-y)$ defines a function in $L^1(\RR^2)$ and deduce from this fact that
@@ -48,14 +48,14 @@ defines a function in $L^1(\RR)$ that satisfies
 \norm{f\ast g}_1 \leq \norm{f}_1 \norm{g}_1
 .\]
 
-## 5
+## Spring 2020 # 5
 
 Compute the following limit and justify your calculations:
 \[
 \lim_{n\to\infty} \int_0^n \qty{1 + {x^2 \over n}}^{-(n+1)} \,dx
 .\]
 
-## 6
+## Spring 2020 # 6
 
 a. Show that
   \[
