--- a/Real Analysis/UGA Questions/sections/02_2019 Fall.md
+++ b/Real Analysis/UGA Questions/sections/02_2019 Fall.md
@@ -1,6 +1,6 @@
 # Fall 2019
 
-## 1. 
+## Fall 2019 # 1. 
 Let $\{a_n\}_{n=1}^\infty$ be a sequence of real numbers.
 
 a. Prove that if $\displaystyle\lim_{n→∞} a_n = 0$, then 
@@ -13,7 +13,7 @@ $$
 \lim _{n \rightarrow \infty} \frac{a_{1}+\cdots+a_{n}}{n}=0
 $$
 
-## 2. 
+## Fall 2019 # 2. 
 
 Prove that
 $$
@@ -24,7 +24,7 @@ for all $x \neq 0$ and positive integers $n$.
 
 > Hint: Consider $\displaystyle\int_0^1 \cos(tx) dt$
 
-## 3. 
+## Fall 2019 # 3. 
 Let $(X, \mathcal B, µ)$ be a measure space with $µ(X) = 1$ and $\{B_n\}_{n=1}^\infty$ be a sequence of $\mathcal B$-measurable subsets of $X$, and
 $$
 B \definedas \theset{x\in X \suchthat x\in B_n \text{ for infinitely many } n}.
@@ -42,7 +42,7 @@ for all positive integers $k$ and $K$ with $k < K$, then $µ(B) = 1$.
 
 > Hint: Use the fact that $1 - x ≤ e^{-x}$ for all $x$.
 
-## 4. 
+## Fall 2019 # 4. 
 Let $\{u_n\}_{n=1}^∞$ be an orthonormal sequence in a Hilbert space $\mathcal{H}$.
 
 a. Prove that for every $x ∈ \mathcal H$ one has 
@@ -59,7 +59,7 @@ b. Prove that for any sequence $\{a_n\}_{n=1}^\infty \in \ell^2(\NN)$ there exis
   \norm{x}^2 = \sum_{n=1}^{\infty}\left|\left\langle x, u_{n}\right\rangle\right|^{2}
   $$
 
-## 5.
+## Fall 2019 # 5.
 
 a. Show that if $f$ is continuous with compact support on $\RR$, then 
 $$
