--- a/Real Analysis/UGA Questions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Questions/sections/05_2018 Spring.md
@@ -1,6 +1,6 @@
 # Spring 2018
 
-## 1
+## Spring 2018 # 1
 Define
 $$
 E:=\left\{x \in \mathbb{R}:\left|x-\frac{p}{q}\right|<q^{-3} \text { for infinitely many } p, q \in \mathbb{N}\right\}.
@@ -8,7 +8,7 @@ $$
 
 Prove that $m(E) = 0$.
 
-## 2
+## Spring 2018 # 2
 Let
 $$
 f_{n}(x):=\frac{x}{1+x^{n}}, \quad x \geq 0.
@@ -21,7 +21,7 @@ $$
 \lim _{n \rightarrow \infty} \int_{0}^{\infty} f_{n}(x) d x
 $$
 
-## 3
+## Spring 2018 # 3
 Let $f$ be a non-negative measurable function on $[0, 1]$. 
 
 Show that
@@ -29,7 +29,7 @@ $$
 \lim _{p \rightarrow \infty}\left(\int_{[0,1]} f(x)^{p} d x\right)^{\frac{1}{p}}=\|f\|_{\infty}.
 $$
 
-## 4
+## Spring 2018 # 4
 Let $f\in L^2([0, 1])$ and suppose
 $$
 \int_{[0,1]} f(x) x^{n} d x=0 \text { for all integers } n \geq 0.
@@ -37,7 +37,7 @@ $$
 Show that $f = 0$ almost everywhere.
 
 
-## 5
+## Spring 2018 # 5
 
 Suppose that
 
