--- a/Real Analysis/UGA Questions/sections/06_2017 Fall.md
+++ b/Real Analysis/UGA Questions/sections/06_2017 Fall.md
@@ -1,6 +1,6 @@
 # Fall 2017
 
-## 1
+## Fall 2017 # 1
 Let 
 $$
 f(x) = s \sum_{n=0}^{\infty} \frac{x^{n}}{n !}.
@@ -8,7 +8,7 @@ $$
 
 Describe the intervals on which $f$ does and does not converge uniformly.
 
-## 2
+## Fall 2017 # 2
 Let $f(x) = x^2$ and $E \subset [0, \infty) \definedas \RR^+$.
 
 1. Show that
@@ -24,7 +24,7 @@ E &\mapsto f(E)
 \]
   is a bijection from the class of Lebesgue measurable sets of $[0, \infty)$ to itself.
 
-## 3
+## Fall 2017 # 3
 Let 
 $$
 S = \spanof_\CC\theset{\chi_{(a, b)} \suchthat a, b \in \RR},
@@ -36,7 +36,7 @@ $$
 \lim _{n \rightarrow \infty}\left\|f_{n}-f\right\|_{1}=0
 $$
 
-## 4
+## Fall 2017 # 4
 Let
 $$
 f_{n}(x)=n x(1-x)^{n}, \quad n \in \mathbb{N}.
@@ -51,7 +51,7 @@ $$
 \lim _{n \rightarrow \infty} \int_{0}^{1} n(1-x)^{n} \sin x d x=0
 $$
 
-## 5
+## Fall 2017 # 5
 Let $\phi$ be a compactly supported smooth function that vanishes outside of an interval $[-N, N]$ such that $\int_{\mathrm{R}} \phi(x) d x=1$.
 
 For $f\in L^1(\RR)$, define
@@ -73,7 +73,7 @@ $$
 $$
 
 
-## 6
+## Fall 2017 # 6
 Let $X$ be a complete metric space and define a norm
 $$
 \|f\|:=\max \{|f(x)|: x \in X\}.
