--- a/Real Analysis/UGA Questions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Questions/sections/07_2017 Spring.md
@@ -1,6 +1,6 @@
 # Spring 2017
 
-## 1
+## Spring 2017 # 1
 
 Let $K$ be the set of numbers in $[0, 1]$ whose decimal expansions do not use the digit $4$.
 
@@ -10,7 +10,7 @@ different from 4, we replace the digit $4$ with $399\cdots$. For example, $0.875
 Show that $K$ is a compact, nowhere dense set without isolated points, and find the
 Lebesgue measure $m(K)$.
 
-## 2
+## Spring 2017 # 2
 
 a. Let $\mu$ be a measure on a measurable space $(X, \mathcal M)$ and $f$ a positive measurable function.
   
@@ -30,7 +30,7 @@ $$
 $$
   Show that $m(E) = 0$.
 
-## 3
+## Spring 2017 # 3
 
 Let
 $$
@@ -50,7 +50,7 @@ $$
 \int_{0}^{\infty} \sum_{n=1}^{\infty} f_{n}(x) ~d m=\ln \frac{b}{a}
 $$
 
-## 4
+## Spring 2017 # 4
 Let $f(x, y)$ on $[-1, 1]^2$ be defined by 
 $$
 f(x, y) = \begin{cases}
@@ -61,7 +61,7 @@ $$
 Determine if $f$ is integrable.
 
 
-## 5
+## Spring 2017 # 5
 Let $f, g \in L^2(\RR)$. 
 Prove that the formula
 $$
@@ -69,7 +69,7 @@ h(x):=\int_{-\infty}^{\infty} f(t) g(x-t) d t
 $$
 defines a uniformly continuous function $h$ on $\RR$.
 
-## 5
+## Spring 2017 # 5
 Show that the space $C^1([a, b])$ is a Banach space when equipped with the norm
 $$
 \|f\|:=\sup _{x \in[a, b]}|f(x)|+\sup _{x \in[a, b]}\left|f^{\prime}(x)\right|.
