--- a/Real Analysis/UGA Questions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Questions/sections/04_2018 Fall.md
@@ -1,14 +1,14 @@
 # Fall 2018
 
-## 1
+## Fall 2018 # 1
 Let $f(x) = \frac 1 x$.
 Show that $f$ is uniformly continuous on $(1, \infty)$ but not on $(0,\infty)$.
 
-## 2
+## Fall 2018 # 2
 Let $E\subset \RR$ be a Lebesgue measurable set.
 Show that there is a Borel set $B \subset E$ such that $m(E\setminus B) = 0$.
 
-## 3
+## Fall 2018 # 3
 Suppose $f(x)$ and $xf(x)$ are integrable on $\RR$.
 Define $F$ by
 $$
@@ -20,7 +20,7 @@ F^{\prime}(t)=-\int_{-\infty}^{\infty} x f(x) \sin (x t) d x.
 $$
 
 
-## 4
+## Fall 2018 # 4
 Let $f\in L^1([0, 1])$.
 Prove that
 $$
@@ -29,14 +29,14 @@ $$
 
 > Hint: Begin with the case that $f$ is the characteristic function of an interval.
 
-## 5
+## Fall 2018 # 5
 Let $f \geq 0$ be a measurable function on $\RR$.
 Show that
 $$
 \int_{\mathbb{R}} f=\int_{0}^{\infty} m(\{x: f(x)>t\}) d t
 $$
 
-## 6
+## Fall 2018 # 6
 Compute the following limit and justify your calculations:
 $$
 \lim_{n \rightarrow \infty} \int_{1}^{n} \frac{d x}{\left(1+\frac{x}{n}\right)^{n} \sqrt[n]{x}}
